@@ -18,6 +18,7 @@
  */
 package org.apache.pinot.core.startree;
 
+import it.unimi.dsi.fastutil.objects.ObjectBooleanPair;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
@@ -32,20 +33,29 @@ import org.apache.commons.lang3.tuple.Pair;
 import org.apache.pinot.common.request.context.ExpressionContext;
 import org.apache.pinot.common.request.context.FilterContext;
 import org.apache.pinot.common.request.context.predicate.Predicate;
+import org.apache.pinot.core.operator.BaseProjectOperator;
 import org.apache.pinot.core.operator.filter.predicate.PredicateEvaluator;
 import org.apache.pinot.core.query.aggregation.function.AggregationFunction;
 import org.apache.pinot.core.query.aggregation.function.AggregationFunctionUtils;
+import org.apache.pinot.core.query.request.context.QueryContext;
+import org.apache.pinot.core.startree.plan.StarTreeProjectPlanNode;
 import org.apache.pinot.segment.spi.IndexSegment;
 import org.apache.pinot.segment.spi.datasource.DataSource;
 import org.apache.pinot.segment.spi.index.reader.Dictionary;
 import org.apache.pinot.segment.spi.index.startree.AggregationFunctionColumnPair;
+import org.apache.pinot.segment.spi.index.startree.AggregationSpec;
+import org.apache.pinot.segment.spi.index.startree.StarTreeV2;
 import org.apache.pinot.segment.spi.index.startree.StarTreeV2Metadata;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 
 @SuppressWarnings("rawtypes")
 public class StarTreeUtils {
   private StarTreeUtils() {
   }
+
+  private static final Logger LOGGER = LoggerFactory.getLogger(StarTreeUtils.class);
 
   /**
    * Extracts the {@link AggregationFunctionColumnPair}s from the given {@link AggregationFunction}s. Returns
@@ -60,7 +70,7 @@ public class StarTreeUtils {
         new AggregationFunctionColumnPair[numAggregationFunctions];
     for (int i = 0; i < numAggregationFunctions; i++) {
       AggregationFunctionColumnPair aggregationFunctionColumnPair =
-          AggregationFunctionUtils.getAggregationFunctionColumnPair(aggregationFunctions[i]);
+          AggregationFunctionUtils.getStoredFunctionColumnPair(aggregationFunctions[i]);
       if (aggregationFunctionColumnPair != null) {
         aggregationFunctionColumnPairs[i] = aggregationFunctionColumnPair;
       } else {
@@ -71,13 +81,13 @@ public class StarTreeUtils {
   }
 
   /**
-   * Extracts a map from the column to a list of {@link PredicateEvaluator}s for it. Returns {@code null} if the filter
-   * cannot be solved by the star-tree.
+   * Extracts a map from the column to a list of {@link CompositePredicateEvaluator}s for it. Returns {@code null} if
+   * the filter cannot be solved by the star-tree.
    *
    * A predicate can be simple (d1 > 10) or composite (d1 > 10 AND d2 < 50) or multi levelled
-   * (d1 > 50 AND (d2 > 10 OR d2 < 35)).
+   * (d1 > 50 AND (d2 > 10 OR NOT d2 > 35)).
    * This method represents a list of CompositePredicates per dimension. For each dimension, all CompositePredicates in
-   * the list are implicitly ANDed together. Any OR predicates are nested within a CompositePredicate.
+   * the list are implicitly ANDed together. Any OR and NOT predicates are nested within a CompositePredicate.
    *
    * A map from predicates to their evaluators is passed in to accelerate the computation.
    */
@@ -98,32 +108,61 @@ public class StarTreeUtils {
           queue.addAll(filterNode.getChildren());
           break;
         case OR:
-          Pair<String, List<PredicateEvaluator>> pair =
+          Pair<String, CompositePredicateEvaluator> pair =
               isOrClauseValidForStarTree(indexSegment, filterNode, predicateEvaluatorMapping);
           if (pair == null) {
             return null;
           }
-          List<PredicateEvaluator> predicateEvaluators = pair.getRight();
-          // NOTE: Empty list means always true
-          if (!predicateEvaluators.isEmpty()) {
-            predicateEvaluatorsMap.computeIfAbsent(pair.getLeft(), k -> new ArrayList<>())
-                .add(new CompositePredicateEvaluator(predicateEvaluators));
+          // NOTE: Null identifier means always true
+          if (pair.getLeft() != null) {
+            predicateEvaluatorsMap.computeIfAbsent(pair.getLeft(), k -> new ArrayList<>()).add(pair.getRight());
           }
           break;
         case NOT:
-          // TODO: Support NOT in star-tree
-          return null;
+          boolean negated = true;
+          FilterContext negatedChild = filterNode.getChildren().get(0);
+          while (true) {
+            FilterContext.Type type = negatedChild.getType();
+            if (type == FilterContext.Type.PREDICATE) {
+              Predicate predicate = negatedChild.getPredicate();
+              PredicateEvaluator predicateEvaluator =
+                  getPredicateEvaluator(indexSegment, predicate, predicateEvaluatorMapping);
+              // Do not use star-tree when the predicate cannot be solved with star-tree
+              if (predicateEvaluator == null) {
+                return null;
+              }
+              // Do not use star-tree when the predicate is always false
+              if ((predicateEvaluator.isAlwaysTrue() && negated) || (predicateEvaluator.isAlwaysFalse() && !negated)) {
+                return null;
+              }
+              // Skip adding always true predicate
+              if ((predicateEvaluator.isAlwaysTrue() && !negated) || (predicateEvaluator.isAlwaysFalse() && negated)) {
+                break;
+              }
+              predicateEvaluatorsMap.computeIfAbsent(predicate.getLhs().getIdentifier(), k -> new ArrayList<>())
+                  .add(new CompositePredicateEvaluator(List.of(ObjectBooleanPair.of(predicateEvaluator, negated))));
+              break;
+            }
+            if (type == FilterContext.Type.NOT) {
+              negated = !negated;
+              negatedChild = negatedChild.getChildren().get(0);
+              continue;
+            }
+            // Do not allow nested AND/OR under NOT
+            return null;
+          }
+          break;
         case PREDICATE:
           Predicate predicate = filterNode.getPredicate();
-          PredicateEvaluator predicateEvaluator = getPredicateEvaluator(indexSegment, predicate,
-              predicateEvaluatorMapping);
-          if (predicateEvaluator == null) {
-            // The predicate cannot be solved with star-tree
+          PredicateEvaluator predicateEvaluator =
+              getPredicateEvaluator(indexSegment, predicate, predicateEvaluatorMapping);
+          // Do not use star-tree when the predicate cannot be solved with star-tree or is always false
+          if (predicateEvaluator == null || predicateEvaluator.isAlwaysFalse()) {
             return null;
           }
           if (!predicateEvaluator.isAlwaysTrue()) {
             predicateEvaluatorsMap.computeIfAbsent(predicate.getLhs().getIdentifier(), k -> new ArrayList<>())
-                .add(new CompositePredicateEvaluator(Collections.singletonList(predicateEvaluator)));
+                .add(new CompositePredicateEvaluator(List.of(ObjectBooleanPair.of(predicateEvaluator, false))));
           }
           break;
         default:
@@ -142,11 +181,17 @@ public class StarTreeUtils {
    * </ul>
    */
   public static boolean isFitForStarTree(StarTreeV2Metadata starTreeV2Metadata,
-      AggregationFunctionColumnPair[] aggregationFunctionColumnPairs, @Nullable ExpressionContext[] groupByExpressions,
-      Set<String> predicateColumns) {
+      List<Pair<AggregationFunction, AggregationFunctionColumnPair>> aggregations,
+      @Nullable ExpressionContext[] groupByExpressions, Set<String> predicateColumns) {
     // Check aggregations
-    for (AggregationFunctionColumnPair aggregationFunctionColumnPair : aggregationFunctionColumnPairs) {
-      if (!starTreeV2Metadata.containsFunctionColumnPair(aggregationFunctionColumnPair)) {
+    for (Pair<AggregationFunction, AggregationFunctionColumnPair> aggregation : aggregations) {
+      AggregationFunction function = aggregation.getLeft();
+      AggregationFunctionColumnPair functionColumnPair = aggregation.getRight();
+      AggregationSpec aggregationSpec = starTreeV2Metadata.getAggregationSpecs().get(functionColumnPair);
+      if (aggregationSpec == null) {
+        return false;
+      }
+      if (!function.canUseStarTree(aggregationSpec.getFunctionParameters())) {
         return false;
       }
     }
@@ -173,67 +218,91 @@ public class StarTreeUtils {
    * StarTree supports OR predicates on a single dimension only (d1 < 10 OR d1 > 50).
    *
    * @return The pair of single identifier and predicate evaluators applied to it if true; {@code null} if the OR clause
-   *         cannot be solved with star-tree; empty predicate evaluator list if the OR clause always evaluates to true.
+   *         cannot be solved with star-tree; a pair of nulls if the OR clause always evaluates to true.
    */
   @Nullable
-  private static Pair<String, List<PredicateEvaluator>> isOrClauseValidForStarTree(IndexSegment indexSegment,
+  private static Pair<String, CompositePredicateEvaluator> isOrClauseValidForStarTree(IndexSegment indexSegment,
       FilterContext filter, List<Pair<Predicate, PredicateEvaluator>> predicateEvaluatorMapping) {
     assert filter.getType() == FilterContext.Type.OR;
 
-    List<Predicate> predicates = new ArrayList<>();
+    List<ObjectBooleanPair<Predicate>> predicates = new ArrayList<>();
     if (!extractOrClausePredicates(filter, predicates)) {
       return null;
     }
 
     String identifier = null;
-    List<PredicateEvaluator> predicateEvaluators = new ArrayList<>();
-    for (Predicate predicate : predicates) {
-      PredicateEvaluator predicateEvaluator = getPredicateEvaluator(indexSegment, predicate, predicateEvaluatorMapping);
+    List<ObjectBooleanPair<PredicateEvaluator>> predicateEvaluators = new ArrayList<>();
+    for (ObjectBooleanPair<Predicate> predicate : predicates) {
+      PredicateEvaluator predicateEvaluator =
+          getPredicateEvaluator(indexSegment, predicate.left(), predicateEvaluatorMapping);
       if (predicateEvaluator == null) {
         // The predicate cannot be solved with star-tree
         return null;
       }
-      if (predicateEvaluator.isAlwaysTrue()) {
-        // Use empty predicate evaluators to represent always true
-        return Pair.of(null, Collections.emptyList());
+      boolean negated = predicate.rightBoolean();
+      // Use a pair of null values to represent always true
+      if ((predicateEvaluator.isAlwaysTrue() && !negated) || (predicateEvaluator.isAlwaysFalse() && negated)) {
+        return Pair.of(null, null);
       }
-      if (!predicateEvaluator.isAlwaysFalse()) {
-        String predicateIdentifier = predicate.getLhs().getIdentifier();
-        if (identifier == null) {
-          identifier = predicateIdentifier;
-        } else {
-          if (!identifier.equals(predicateIdentifier)) {
-            // The predicates are applied to multiple columns
-            return null;
-          }
+      // Skip the always false predicate
+      if ((predicateEvaluator.isAlwaysTrue() && negated) || (predicateEvaluator.isAlwaysFalse() && !negated)) {
+        continue;
+      }
+      String predicateIdentifier = predicate.left().getLhs().getIdentifier();
+      if (identifier == null) {
+        identifier = predicateIdentifier;
+      } else {
+        if (!identifier.equals(predicateIdentifier)) {
+          // The predicates are applied to multiple columns
+          return null;
         }
-        predicateEvaluators.add(predicateEvaluator);
       }
+      predicateEvaluators.add(ObjectBooleanPair.of(predicateEvaluator, negated));
     }
-    return Pair.of(identifier, predicateEvaluators);
+    // When all predicates are always false, do not use star-tree
+    if (predicateEvaluators.isEmpty()) {
+      return null;
+    }
+    return Pair.of(identifier, new CompositePredicateEvaluator(predicateEvaluators));
   }
 
   /**
    * Extracts the predicates under the given OR clause, returns {@code false} if there is nested AND or NOT under OR
    * clause.
-   * TODO: Support NOT in star-tree
    */
-  private static boolean extractOrClausePredicates(FilterContext filter, List<Predicate> predicates) {
+  private static boolean extractOrClausePredicates(FilterContext filter,
+      List<ObjectBooleanPair<Predicate>> predicates) {
     assert filter.getType() == FilterContext.Type.OR;
 
     for (FilterContext child : filter.getChildren()) {
       switch (child.getType()) {
         case AND:
-        case NOT:
           return false;
         case OR:
           if (!extractOrClausePredicates(child, predicates)) {
             return false;
           }
-          predicates.add(child.getPredicate());
+          break;
+        case NOT:
+          boolean negated = true;
+          FilterContext negatedChild = child.getChildren().get(0);
+          while (true) {
+            FilterContext.Type type = negatedChild.getType();
+            if (type == FilterContext.Type.PREDICATE) {
+              predicates.add(ObjectBooleanPair.of(negatedChild.getPredicate(), negated));
+              break;
+            }
+            if (type == FilterContext.Type.NOT) {
+              negated = !negated;
+              negatedChild = negatedChild.getChildren().get(0);
+              continue;
+            }
+            // Do not allow nested AND/OR under NOT
+            return false;
+          }
           break;
         case PREDICATE:
-          predicates.add(child.getPredicate());
+          predicates.add(ObjectBooleanPair.of(child.getPredicate(), false));
           break;
         default:
           throw new IllegalStateException();
@@ -274,8 +343,92 @@ public class StarTreeUtils {
         break;
     }
     for (Pair<Predicate, PredicateEvaluator> pair : predicatesEvaluatorMapping) {
-      if (pair.getKey().equals(predicate)) {
+      if (pair.getKey() == predicate) {
         return pair.getValue();
+      }
+    }
+    return null;
+  }
+
+  /**
+   * Returns a {@link BaseProjectOperator} when the filter can be solved with star-tree, or {@code null} otherwise.
+   */
+  @Nullable
+  public static BaseProjectOperator<?> createStarTreeBasedProjectOperator(IndexSegment indexSegment,
+      QueryContext queryContext, AggregationFunction[] aggregationFunctions, @Nullable FilterContext filter,
+      List<Pair<Predicate, PredicateEvaluator>> predicateEvaluators) {
+    List<StarTreeV2> starTrees = indexSegment.getStarTrees();
+    if (starTrees == null || queryContext.isSkipStarTree()) {
+      return null;
+    }
+
+    AggregationFunctionColumnPair[] aggregationFunctionColumnPairs =
+        extractAggregationFunctionPairs(aggregationFunctions);
+    if (aggregationFunctionColumnPairs == null) {
+      return null;
+    }
+
+    Map<String, List<CompositePredicateEvaluator>> predicateEvaluatorsMap =
+        extractPredicateEvaluatorsMap(indexSegment, filter, predicateEvaluators);
+    if (predicateEvaluatorsMap == null) {
+      return null;
+    }
+
+    ExpressionContext[] groupByExpressions =
+        queryContext.getGroupByExpressions() != null ? queryContext.getGroupByExpressions()
+            .toArray(new ExpressionContext[0]) : null;
+
+    if (queryContext.isNullHandlingEnabled()) {
+      // We can still use the star-tree index if there aren't actually any null values in this segment for all the
+      // metrics being aggregated, all the dimensions being filtered on / grouped by.
+      for (AggregationFunctionColumnPair aggregationFunctionColumnPair : aggregationFunctionColumnPairs) {
+        if (aggregationFunctionColumnPair == AggregationFunctionColumnPair.COUNT_STAR) {
+          // Null handling is irrelevant for COUNT(*)
+          continue;
+        }
+
+        String column = aggregationFunctionColumnPair.getColumn();
+        DataSource dataSource = indexSegment.getDataSource(column);
+        if (dataSource.getNullValueVector() != null && !dataSource.getNullValueVector().getNullBitmap().isEmpty()) {
+          LOGGER.debug("Cannot use star-tree index because aggregation column: '{}' has null values", column);
+          return null;
+        }
+      }
+
+      for (String column : predicateEvaluatorsMap.keySet()) {
+        DataSource dataSource = indexSegment.getDataSource(column);
+        if (dataSource.getNullValueVector() != null && !dataSource.getNullValueVector().getNullBitmap().isEmpty()) {
+          LOGGER.debug("Cannot use star-tree index because filter column: '{}' has null values", column);
+          return null;
+        }
+      }
+
+      Set<String> groupByColumns = new HashSet<>();
+      if (groupByExpressions != null) {
+        for (ExpressionContext groupByExpression : groupByExpressions) {
+          groupByExpression.getColumns(groupByColumns);
+        }
+      }
+      for (String column : groupByColumns) {
+        DataSource dataSource = indexSegment.getDataSource(column);
+        if (dataSource.getNullValueVector() != null && !dataSource.getNullValueVector().getNullBitmap().isEmpty()) {
+          LOGGER.debug("Cannot use star-tree index because group-by column: '{}' has null values", column);
+          return null;
+        }
+      }
+    }
+
+    List<Pair<AggregationFunction, AggregationFunctionColumnPair>> aggregations =
+        new ArrayList<>(aggregationFunctions.length);
+    for (int i = 0; i < aggregationFunctions.length; i++) {
+      aggregations.add(Pair.of(aggregationFunctions[i], aggregationFunctionColumnPairs[i]));
+    }
+
+    for (StarTreeV2 starTreeV2 : starTrees) {
+      if (isFitForStarTree(starTreeV2.getMetadata(), aggregations, groupByExpressions,
+          predicateEvaluatorsMap.keySet())) {
+        return new StarTreeProjectPlanNode(queryContext, starTreeV2, aggregationFunctionColumnPairs, groupByExpressions,
+            predicateEvaluatorsMap).run();
       }
     }
     return null;
