@@ -19,7 +19,7 @@
 package org.apache.pinot.queries;
 
 import java.io.File;
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,6 +29,7 @@ import java.util.concurrent.TimeoutException;
 import javax.annotation.Nullable;
 import org.apache.pinot.common.datatable.DataTable;
 import org.apache.pinot.common.datatable.DataTableFactory;
+import org.apache.pinot.common.metrics.BrokerMetrics;
 import org.apache.pinot.common.request.BrokerRequest;
 import org.apache.pinot.common.request.PinotQuery;
 import org.apache.pinot.common.response.broker.BrokerResponseNative;
@@ -49,6 +50,7 @@ import org.apache.pinot.segment.local.segment.index.loader.IndexLoadingConfig;
 import org.apache.pinot.segment.local.segment.index.loader.SegmentPreProcessor;
 import org.apache.pinot.segment.spi.ImmutableSegment;
 import org.apache.pinot.segment.spi.IndexSegment;
+import org.apache.pinot.segment.spi.SegmentContext;
 import org.apache.pinot.segment.spi.loader.SegmentDirectoryLoaderContext;
 import org.apache.pinot.segment.spi.loader.SegmentDirectoryLoaderRegistry;
 import org.apache.pinot.segment.spi.store.SegmentDirectory;
@@ -56,11 +58,14 @@ import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.env.PinotConfiguration;
-import org.apache.pinot.spi.utils.CommonConstants;
+import org.apache.pinot.spi.utils.CommonConstants.Broker;
 import org.apache.pinot.spi.utils.CommonConstants.Server;
 import org.apache.pinot.spi.utils.ReadMode;
 import org.apache.pinot.sql.parsers.CalciteSqlCompiler;
 import org.apache.pinot.sql.parsers.CalciteSqlParser;
+import org.intellij.lang.annotations.Language;
+
+import static org.mockito.Mockito.mock;
 
 
 /**
@@ -69,9 +74,14 @@ import org.apache.pinot.sql.parsers.CalciteSqlParser;
 public abstract class BaseQueriesTest {
   protected static final PlanMaker PLAN_MAKER = new InstancePlanMakerImplV2();
   protected static final QueryOptimizer OPTIMIZER = new QueryOptimizer();
-
   protected static final ExecutorService EXECUTOR_SERVICE = Executors.newFixedThreadPool(2);
+  protected static final BrokerMetrics BROKER_METRICS = mock(BrokerMetrics.class);
 
+  public final void shutdownExecutor() {
+    EXECUTOR_SERVICE.shutdownNow();
+  }
+
+  @Language(value = "sql", prefix = "select * from table")
   protected abstract String getFilter();
 
   protected abstract IndexSegment getIndexSegment();
@@ -79,7 +89,7 @@ public abstract class BaseQueriesTest {
   protected abstract List<IndexSegment> getIndexSegments();
 
   protected List<List<IndexSegment>> getDistinctInstances() {
-    return Collections.singletonList(getIndexSegments());
+    return List.of(getIndexSegments());
   }
 
   /**
@@ -87,11 +97,11 @@ public abstract class BaseQueriesTest {
    * <p>Use this to test a single operator.
    */
   @SuppressWarnings({"rawtypes", "unchecked"})
-  protected <T extends Operator> T getOperator(String query) {
+  protected <T extends Operator> T getOperator(@Language("sql") String query) {
     PinotQuery pinotQuery = CalciteSqlParser.compileToPinotQuery(query);
     PinotQuery serverPinotQuery = GapfillUtils.stripGapfill(pinotQuery);
     QueryContext queryContext = QueryContextConverterUtils.getQueryContext(serverPinotQuery);
-    return (T) PLAN_MAKER.makeSegmentPlanNode(getIndexSegment(), queryContext).run();
+    return (T) PLAN_MAKER.makeSegmentPlanNode(new SegmentContext(getIndexSegment()), queryContext).run();
   }
 
   /**
@@ -99,7 +109,7 @@ public abstract class BaseQueriesTest {
    * <p>Use this to test a single operator.
    */
   @SuppressWarnings("rawtypes")
-  protected <T extends Operator> T getOperatorWithFilter(String query) {
+  protected <T extends Operator> T getOperatorWithFilter(@Language("sql") String query) {
     return getOperator(query + getFilter());
   }
 
@@ -113,7 +123,7 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  protected BrokerResponseNative getBrokerResponse(String query) {
+  protected BrokerResponseNative getBrokerResponse(@Language("sql") String query) {
     return getBrokerResponse(query, PLAN_MAKER);
   }
 
@@ -127,7 +137,7 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  protected BrokerResponseNative getBrokerResponseWithFilter(String query) {
+  protected BrokerResponseNative getBrokerResponseWithFilter(@Language("sql") String query) {
     return getBrokerResponse(query + getFilter());
   }
 
@@ -141,7 +151,7 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  protected BrokerResponseNative getBrokerResponse(String query, PlanMaker planMaker) {
+  protected BrokerResponseNative getBrokerResponse(@Language("sql") String query, PlanMaker planMaker) {
     return getBrokerResponse(query, planMaker, null);
   }
 
@@ -155,7 +165,8 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  protected BrokerResponseNative getBrokerResponse(String query, @Nullable Map<String, String> extraQueryOptions) {
+  protected BrokerResponseNative getBrokerResponse(
+      @Language("sql") String query, @Nullable Map<String, String> extraQueryOptions) {
     return getBrokerResponse(query, PLAN_MAKER, extraQueryOptions);
   }
 
@@ -169,7 +180,7 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  private BrokerResponseNative getBrokerResponse(String query, PlanMaker planMaker,
+  private BrokerResponseNative getBrokerResponse(@Language("sql") String query, PlanMaker planMaker,
       @Nullable Map<String, String> extraQueryOptions) {
     PinotQuery pinotQuery = CalciteSqlParser.compileToPinotQuery(query);
     if (extraQueryOptions != null) {
@@ -206,19 +217,18 @@ public abstract class BaseQueriesTest {
 
     // Server side
     serverQueryContext.setEndTimeMs(System.currentTimeMillis() + Server.DEFAULT_QUERY_EXECUTOR_TIMEOUT_MS);
-    Plan plan = planMaker.makeInstancePlan(getIndexSegments(), serverQueryContext, EXECUTOR_SERVICE, null);
+    Plan plan =
+        planMaker.makeInstancePlan(getSegmentContexts(getIndexSegments()), serverQueryContext, EXECUTOR_SERVICE, null);
     InstanceResponseBlock instanceResponse;
     try {
-      instanceResponse =
-          queryContext.isExplain() ? ServerQueryExecutorV1Impl.executeExplainQuery(plan, queryContext) : plan.execute();
+      instanceResponse = queryContext.isExplain()
+          ? ServerQueryExecutorV1Impl.executeDescribeExplain(plan, queryContext)
+          : plan.execute();
     } catch (TimeoutException e) {
       throw new RuntimeException(e);
     }
 
     // Broker side
-    // Use 2 Threads for 2 data-tables
-    BrokerReduceService brokerReduceService = new BrokerReduceService(new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
     Map<ServerRoutingInstance, DataTable> dataTableMap = new HashMap<>();
     try {
       // For multi-threaded BrokerReduceService, we cannot reuse the same data-table
@@ -233,11 +243,23 @@ public abstract class BaseQueriesTest {
     BrokerRequest brokerRequest = CalciteSqlCompiler.convertToBrokerRequest(pinotQuery);
     BrokerRequest serverBrokerRequest =
         serverPinotQuery == pinotQuery ? brokerRequest : CalciteSqlCompiler.convertToBrokerRequest(serverPinotQuery);
+    return reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap);
+  }
+
+  private static List<SegmentContext> getSegmentContexts(List<IndexSegment> indexSegments) {
+    List<SegmentContext> segmentContexts = new ArrayList<>(indexSegments.size());
+    indexSegments.forEach(s -> segmentContexts.add(new SegmentContext(s)));
+    return segmentContexts;
+  }
+
+  protected BrokerResponseNative reduceOnDataTable(BrokerRequest brokerRequest, BrokerRequest serverBrokerRequest,
+      Map<ServerRoutingInstance, DataTable> dataTableMap) {
+    BrokerReduceService brokerReduceService =
+        new BrokerReduceService(new PinotConfiguration(Map.of(Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
     BrokerResponseNative brokerResponse =
         brokerReduceService.reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap,
-            CommonConstants.Broker.DEFAULT_BROKER_TIMEOUT_MS, null);
+            Broker.DEFAULT_BROKER_TIMEOUT_MS, BROKER_METRICS);
     brokerReduceService.shutDown();
-
     return brokerResponse;
   }
 
@@ -251,8 +273,8 @@ public abstract class BaseQueriesTest {
    * This can be particularly useful to test statistical aggregation functions.
    * @see StatisticalQueriesTest for an example use case.
    */
-  protected BrokerResponseNative getBrokerResponseForOptimizedQuery(String query, @Nullable TableConfig config,
-      @Nullable Schema schema) {
+  protected BrokerResponseNative getBrokerResponseForOptimizedQuery(
+      @Language("sql") String query, @Nullable TableConfig config, @Nullable Schema schema) {
     PinotQuery pinotQuery = CalciteSqlParser.compileToPinotQuery(query);
     OPTIMIZER.optimize(pinotQuery, config, schema);
     return getBrokerResponse(pinotQuery, PLAN_MAKER);
@@ -297,28 +319,29 @@ public abstract class BaseQueriesTest {
     List<List<IndexSegment>> instances = getDistinctInstances();
     // Server side
     serverQueryContext.setEndTimeMs(System.currentTimeMillis() + Server.DEFAULT_QUERY_EXECUTOR_TIMEOUT_MS);
-    Plan plan1 = planMaker.makeInstancePlan(instances.get(0), serverQueryContext, EXECUTOR_SERVICE, null);
-    Plan plan2 = planMaker.makeInstancePlan(instances.get(1), serverQueryContext, EXECUTOR_SERVICE, null);
+    Plan plan1 =
+        planMaker.makeInstancePlan(getSegmentContexts(instances.get(0)), serverQueryContext, EXECUTOR_SERVICE, null);
+    Plan plan2 =
+        planMaker.makeInstancePlan(getSegmentContexts(instances.get(1)), serverQueryContext, EXECUTOR_SERVICE, null);
 
     InstanceResponseBlock instanceResponse1;
     try {
-      instanceResponse1 = queryContext.isExplain() ? ServerQueryExecutorV1Impl.executeExplainQuery(plan1, queryContext)
+      instanceResponse1 = queryContext.isExplain()
+          ? ServerQueryExecutorV1Impl.executeDescribeExplain(plan1, queryContext)
           : plan1.execute();
     } catch (TimeoutException e) {
       throw new RuntimeException(e);
     }
     InstanceResponseBlock instanceResponse2;
     try {
-      instanceResponse2 = queryContext.isExplain() ? ServerQueryExecutorV1Impl.executeExplainQuery(plan2, queryContext)
+      instanceResponse2 = queryContext.isExplain()
+          ? ServerQueryExecutorV1Impl.executeDescribeExplain(plan2, queryContext)
           : plan2.execute();
     } catch (TimeoutException e) {
       throw new RuntimeException(e);
     }
 
     // Broker side
-    // Use 2 Threads for 2 data-tables
-    BrokerReduceService brokerReduceService = new BrokerReduceService(new PinotConfiguration(
-        Collections.singletonMap(CommonConstants.Broker.CONFIG_OF_MAX_REDUCE_THREADS_PER_QUERY, 2)));
     Map<ServerRoutingInstance, DataTable> dataTableMap = new HashMap<>();
     try {
       // For multi-threaded BrokerReduceService, we cannot reuse the same data-table
@@ -334,10 +357,6 @@ public abstract class BaseQueriesTest {
     BrokerRequest brokerRequest = CalciteSqlCompiler.convertToBrokerRequest(pinotQuery);
     BrokerRequest serverBrokerRequest =
         serverPinotQuery == pinotQuery ? brokerRequest : CalciteSqlCompiler.convertToBrokerRequest(serverPinotQuery);
-    BrokerResponseNative brokerResponse =
-        brokerReduceService.reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap,
-            CommonConstants.Broker.DEFAULT_BROKER_TIMEOUT_MS, null);
-    brokerReduceService.shutDown();
-    return brokerResponse;
+    return reduceOnDataTable(brokerRequest, serverBrokerRequest, dataTableMap);
   }
 }
