@@ -18,24 +18,19 @@
  */
 package org.apache.pinot.plugin.inputformat.parquet;
 
-import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Maps;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import javax.annotation.Nullable;
 import org.apache.parquet.example.data.Group;
 import org.apache.parquet.io.api.Binary;
-import org.apache.parquet.schema.DecimalMetadata;
 import org.apache.parquet.schema.GroupType;
-import org.apache.parquet.schema.OriginalType;
+import org.apache.parquet.schema.LogicalTypeAnnotation;
 import org.apache.parquet.schema.PrimitiveType;
 import org.apache.parquet.schema.Type;
 import org.apache.pinot.spi.data.readers.BaseRecordExtractor;
@@ -94,9 +89,9 @@ public class ParquetNativeRecordExtractor extends BaseRecordExtractor<Group> {
   public void init(@Nullable Set<String> fields, RecordExtractorConfig recordExtractorConfig) {
     if (fields == null || fields.isEmpty()) {
       _extractAll = true;
-      _fields = Collections.emptySet();
+      _fields = Set.of();
     } else {
-      _fields = ImmutableSet.copyOf(fields);
+      _fields = Set.copyOf(fields);
     }
   }
 
@@ -125,32 +120,46 @@ public class ParquetNativeRecordExtractor extends BaseRecordExtractor<Group> {
     return to;
   }
 
+  @Nullable
   private Object extractValue(Group from, int fieldIndex) {
-    int valueCount = from.getFieldRepetitionCount(fieldIndex);
+    int numValues = from.getFieldRepetitionCount(fieldIndex);
     Type fieldType = from.getType().getType(fieldIndex);
-    if (valueCount == 0) {
+    if (numValues == 0) {
       return null;
     }
-    if (valueCount == 1) {
+    if (numValues == 1) {
       return extractValue(from, fieldIndex, fieldType, 0);
     }
     // For multi-value (repeated field)
-    Object[] results = new Object[valueCount];
-    for (int index = 0; index < valueCount; index++) {
-      results[index] = extractValue(from, fieldIndex, fieldType, index);
+    Object[] results = new Object[numValues];
+    for (int i = 0; i < numValues; i++) {
+      results[i] = extractValue(from, fieldIndex, fieldType, i);
     }
     return results;
   }
 
+  @Nullable
   private Object extractValue(Group from, int fieldIndex, Type fieldType, int index) {
-    OriginalType originalType = fieldType.getOriginalType();
+    LogicalTypeAnnotation logicalTypeAnnotation = fieldType.getLogicalTypeAnnotation();
     if (fieldType.isPrimitive()) {
       PrimitiveType.PrimitiveTypeName primitiveTypeName = fieldType.asPrimitiveType().getPrimitiveTypeName();
       switch (primitiveTypeName) {
         case INT32:
-          return from.getInteger(fieldIndex, index);
+          int intValue = from.getInteger(fieldIndex, index);
+          if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) {
+            LogicalTypeAnnotation.DecimalLogicalTypeAnnotation decimalLogicalTypeAnnotation =
+                (LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) logicalTypeAnnotation;
+            return BigDecimal.valueOf(intValue, decimalLogicalTypeAnnotation.getScale());
+          }
+          return intValue;
         case INT64:
-          return from.getLong(fieldIndex, index);
+          long longValue = from.getLong(fieldIndex, index);
+          if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) {
+            LogicalTypeAnnotation.DecimalLogicalTypeAnnotation decimalLogicalTypeAnnotation =
+                (LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) logicalTypeAnnotation;
+            return BigDecimal.valueOf(longValue, decimalLogicalTypeAnnotation.getScale());
+          }
+          return longValue;
         case FLOAT:
           return from.getFloat(fieldIndex, index);
         case DOUBLE:
@@ -159,35 +168,31 @@ public class ParquetNativeRecordExtractor extends BaseRecordExtractor<Group> {
           return from.getValueToString(fieldIndex, index);
         case INT96:
           Binary int96 = from.getInt96(fieldIndex, index);
-          ByteBuffer buf = ByteBuffer.wrap(int96.getBytes()).order(ByteOrder.LITTLE_ENDIAN);
-          long dateTime = (buf.getInt(8) - JULIAN_DAY_NUMBER_FOR_UNIX_EPOCH) * DateTimeConstants.MILLIS_PER_DAY
-              + buf.getLong(0) / NANOS_PER_MILLISECOND;
-          return dateTime;
+          return convertInt96ToLong(int96.getBytes());
         case BINARY:
         case FIXED_LEN_BYTE_ARRAY:
-          if (originalType != null) {
-            switch (originalType) {
-              case UTF8:
-              case ENUM:
-                return from.getValueToString(fieldIndex, index);
-              case DECIMAL:
-                DecimalMetadata decimalMetadata = fieldType.asPrimitiveType().getDecimalMetadata();
-                return binaryToDecimal(from.getBinary(fieldIndex, index), decimalMetadata.getPrecision(),
-                    decimalMetadata.getScale());
-              default:
-                break;
-            }
+          if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) {
+            LogicalTypeAnnotation.DecimalLogicalTypeAnnotation decimalLogicalTypeAnnotation =
+                (LogicalTypeAnnotation.DecimalLogicalTypeAnnotation) logicalTypeAnnotation;
+            return binaryToDecimal(from.getBinary(fieldIndex, index), decimalLogicalTypeAnnotation.getPrecision(),
+                decimalLogicalTypeAnnotation.getScale());
+          }
+          if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.StringLogicalTypeAnnotation) {
+            return from.getValueToString(fieldIndex, index);
+          }
+          if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.EnumLogicalTypeAnnotation) {
+            return from.getValueToString(fieldIndex, index);
           }
           return from.getBinary(fieldIndex, index).getBytes();
         default:
           throw new IllegalArgumentException(
-              String.format("Unsupported field type: %s, primitive type: %s, original type: %s", fieldType,
-                  primitiveTypeName, originalType));
+              String.format("Unsupported field type: %s, primitive type: %s, logical type: %s", fieldType,
+                  primitiveTypeName, logicalTypeAnnotation));
       }
     } else if ((fieldType.isRepetition(Type.Repetition.OPTIONAL)) || (fieldType.isRepetition(Type.Repetition.REQUIRED))
         || (fieldType.isRepetition(Type.Repetition.REPEATED))) {
       Group group = from.getGroup(fieldIndex, index);
-      if (originalType == OriginalType.LIST) {
+      if (logicalTypeAnnotation instanceof LogicalTypeAnnotation.ListLogicalTypeAnnotation) {
         return extractList(group);
       }
       return extractMap(group);
@@ -195,80 +200,33 @@ public class ParquetNativeRecordExtractor extends BaseRecordExtractor<Group> {
     return null;
   }
 
+  public static long convertInt96ToLong(byte[] int96Bytes) {
+    ByteBuffer buf = ByteBuffer.wrap(int96Bytes).order(ByteOrder.LITTLE_ENDIAN);
+    return (buf.getInt(8) - JULIAN_DAY_NUMBER_FOR_UNIX_EPOCH) * DateTimeConstants.MILLIS_PER_DAY
+        + buf.getLong(0) / NANOS_PER_MILLISECOND;
+  }
+
   public Object[] extractList(Group group) {
-    int repFieldCount = group.getType().getFieldCount();
-    if (repFieldCount < 1) {
-      return null;
+    int numValues = group.getType().getFieldCount();
+    Object[] array = new Object[numValues];
+    for (int i = 0; i < numValues; i++) {
+      array[i] = extractValue(group, i);
     }
-    Object[] list = new Object[repFieldCount];
-    for (int repFieldIdx = 0; repFieldIdx < repFieldCount; repFieldIdx++) {
-      list[repFieldIdx] = extractValue(group, repFieldIdx);
+    if (numValues == 1 && array[0] == null) {
+      return new Object[0];
     }
-    if (repFieldCount == 1 && list[0] == null) {
-      return null;
+    if (numValues == 1 && array[0] instanceof Object[]) {
+      return (Object[]) array[0];
     }
-    if (repFieldCount == 1 && list[0].getClass().isArray()) {
-      return (Object[]) list[0];
-    }
-    return list;
+    return array;
   }
 
   public Map<String, Object> extractMap(Group group) {
-    final int repFieldCount = group.getType().getFieldCount();
-    if (repFieldCount < 1) {
-      return null;
+    int numValues = group.getType().getFieldCount();
+    Map<String, Object> map = Maps.newHashMapWithExpectedSize(numValues);
+    for (int i = 0; i < numValues; i++) {
+      map.put(group.getType().getType(i).getName(), extractValue(group, i));
     }
-    Map<String, Object> resultMap = new HashMap<>();
-    for (int repFieldIdx = 0; repFieldIdx < repFieldCount; repFieldIdx++) {
-      Object value = extractValue(group, repFieldIdx);
-      resultMap.put(group.getType().getType(repFieldIdx).getName(), value);
-    }
-    return resultMap;
-  }
-
-  @Override
-  public Object convertMap(Object value) {
-    Map<Object, Object> map = (Map) value;
-    if (map.isEmpty()) {
-      return null;
-    }
-    Map<Object, Object> convertedMap = new HashMap<>();
-    for (Map.Entry<Object, Object> entry : map.entrySet()) {
-      Object mapKey = entry.getKey();
-      Object mapValue = entry.getValue();
-      if (mapKey != null) {
-        Object convertedMapValue = null;
-        if (mapValue != null) {
-          convertedMapValue = convert(mapValue);
-        }
-        convertedMap.put(convertSingleValue(entry.getKey()), convertedMapValue);
-      }
-    }
-    if (convertedMap.isEmpty()) {
-      return null;
-    }
-    return convertedMap;
-  }
-
-  @Override
-  public boolean isMultiValue(Object value) {
-    if (super.isMultiValue(value)) {
-      return true;
-    }
-    if (value instanceof byte[]) {
-      return false;
-    }
-    return value.getClass().isArray();
-  }
-
-  @Nullable
-  @Override
-  protected Object convertMultiValue(Object value) {
-    if (value instanceof Collection) {
-      return super.convertMultiValue(value);
-    }
-    // value is Object[]
-    Object[] values = (Object[]) value;
-    return super.convertMultiValue(Arrays.asList(values));
+    return map;
   }
 }
