@@ -18,8 +18,9 @@
  */
 package org.apache.pinot.query.catalog;
 
+import com.google.common.base.Preconditions;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import javax.annotation.Nullable;
 import org.apache.calcite.linq4j.tree.Expression;
@@ -31,7 +32,7 @@ import org.apache.calcite.schema.SchemaVersion;
 import org.apache.calcite.schema.Schemas;
 import org.apache.calcite.schema.Table;
 import org.apache.pinot.common.config.provider.TableCache;
-import org.apache.pinot.common.function.FunctionRegistry;
+import org.apache.pinot.common.utils.DatabaseUtils;
 import org.apache.pinot.spi.utils.builder.TableNameBuilder;
 
 import static java.util.Objects.requireNonNull;
@@ -46,13 +47,18 @@ import static java.util.Objects.requireNonNull;
 public class PinotCatalog implements Schema {
 
   private final TableCache _tableCache;
+  private final String _databaseName;
+
+  // list of tables resolved via this catalog instance
+  private Set<String> _resolvedTables;
 
   /**
    * PinotCatalog needs have access to the actual {@link TableCache} object because TableCache hosts the actual
    * table available for query and processes table/segment metadata updates when cluster status changes.
    */
-  public PinotCatalog(TableCache tableCache) {
+  public PinotCatalog(TableCache tableCache, String databaseName) {
     _tableCache = tableCache;
+    _databaseName = databaseName;
   }
 
   /**
@@ -62,14 +68,20 @@ public class PinotCatalog implements Schema {
    */
   @Override
   public Table getTable(String name) {
-    String tableName = TableNameBuilder.extractRawTableName(name);
-    org.apache.pinot.spi.data.Schema schema = _tableCache.getSchema(tableName);
-    if (schema == null) {
-      throw new IllegalArgumentException("Could not find schema for table: '" + tableName
-          + "'. This is likely indicative of some kind of corruption and should not happen! "
-          + "If you are running this via the a test environment, check to make sure you're "
-          + "specifying the correct tables.");
+    String rawTableName = TableNameBuilder.extractRawTableName(name);
+    String physicalTableName = DatabaseUtils.translateTableName(rawTableName, _databaseName);
+    String tableName = _tableCache.getActualTableName(physicalTableName);
+
+    if (tableName != null) {
+      if (_resolvedTables == null) {
+        _resolvedTables = new HashSet<>();
+      }
+      _resolvedTables.add(tableName);
     }
+
+    Preconditions.checkArgument(tableName != null, String.format("Table does not exist: '%s'", physicalTableName));
+    org.apache.pinot.spi.data.Schema schema = _tableCache.getSchema(tableName);
+    Preconditions.checkArgument(schema != null, String.format("Could not find schema for table: '%s'", tableName));
     return new PinotTable(schema);
   }
 
@@ -79,7 +91,15 @@ public class PinotCatalog implements Schema {
    */
   @Override
   public Set<String> getTableNames() {
-    return _tableCache.getTableNameMap().keySet();
+    Set<String> result = new HashSet<>();
+    for (String tableName: _tableCache.getTableNameMap().keySet()) {
+      if (DatabaseUtils.isPartOfDatabase(tableName, _databaseName)) {
+        result.add(tableName);
+        // if table has no prefix the next add(n) will have no effect
+        result.add(DatabaseUtils.removeDatabasePrefix(tableName, _databaseName));
+      }
+    }
+    return result;
   }
 
   @Override
@@ -89,17 +109,17 @@ public class PinotCatalog implements Schema {
 
   @Override
   public Set<String> getTypeNames() {
-    return Collections.emptySet();
+    return Set.of();
   }
 
   @Override
   public Collection<Function> getFunctions(String name) {
-    return FunctionRegistry.getRegisteredCalciteFunctions(name);
+    return Set.of();
   }
 
   @Override
   public Set<String> getFunctionNames() {
-    return FunctionRegistry.getRegisteredCalciteFunctionNames();
+    return Set.of();
   }
 
   @Override
@@ -109,7 +129,7 @@ public class PinotCatalog implements Schema {
 
   @Override
   public Set<String> getSubSchemaNames() {
-    return Collections.emptySet();
+    return Set.of();
   }
 
   @Override
@@ -126,5 +146,9 @@ public class PinotCatalog implements Schema {
   @Override
   public Schema snapshot(SchemaVersion version) {
     return this;
+  }
+
+  public Set<String> getResolvedTables() {
+    return _resolvedTables;
   }
 }
