@@ -18,14 +18,21 @@
  */
 package org.apache.pinot.segment.local.recordtransformer;
 
-import java.util.Collections;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.Set;
 import javax.annotation.Nullable;
+import org.apache.pinot.segment.local.utils.IngestionUtils;
 import org.apache.pinot.spi.config.table.TableConfig;
+import org.apache.pinot.spi.config.table.ingestion.EnrichmentConfig;
+import org.apache.pinot.spi.config.table.ingestion.IngestionConfig;
 import org.apache.pinot.spi.data.Schema;
 import org.apache.pinot.spi.data.readers.GenericRow;
+import org.apache.pinot.spi.recordtransformer.RecordTransformer;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricher;
+import org.apache.pinot.spi.recordtransformer.enricher.RecordEnricherRegistry;
 
 
 /**
@@ -40,15 +47,24 @@ public class CompositeTransformer implements RecordTransformer {
    * <p>NOTE: DO NOT CHANGE THE ORDER OF THE RECORD TRANSFORMERS
    * <ul>
    *   <li>
-   *     Optional {@link ExpressionTransformer} before everyone else, so that we get the real columns for other
-   *     transformers to work on
+   *     Optional list of {@link RecordEnricher}s to enrich the record before any other transformation.
+   *   </li>
+   *   <li>
+   *     Optional {@link ExpressionTransformer} after enrichers, so that we get the real columns for other transformers
+   *     to work on
    *   </li>
    *   <li>
    *     Optional {@link FilterTransformer} after {@link ExpressionTransformer}, so that we have source as well as
    *     destination columns
    *   </li>
    *   <li>
-   *     {@link DataTypeTransformer} after {@link FilterTransformer} to convert values to comply with the schema
+   *     Optional {@link SchemaConformingTransformer} after {@link FilterTransformer}, so that we can transform input
+   *     records that have varying fields to a fixed schema and keep or drop other fields by configuration. We
+   *     could also gain enhanced text search capabilities from it.
+   *   </li>
+   *   <li>
+   *     {@link DataTypeTransformer} after {@link SchemaConformingTransformer}
+   *     to convert values to comply with the schema
    *   </li>
    *   <li>
    *     Optional {@link TimeValidationTransformer} after {@link DataTypeTransformer} so that time value is converted to
@@ -62,31 +78,87 @@ public class CompositeTransformer implements RecordTransformer {
    *     Optional {@link SanitizationTransformer} after {@link NullValueTransformer} so that before sanitation, all
    *     values are non-null and follow the data types defined in the schema
    *   </li>
+   *   <li>
+   *     {@link SpecialValueTransformer} after {@link DataTypeTransformer} so that we already have the values complying
+   *      with the schema before handling special values and before {@link NullValueTransformer} so that it transforms
+   *      all the null values properly
+   *   </li>
    * </ul>
    */
+  public static List<RecordTransformer> getDefaultTransformers(TableConfig tableConfig, Schema schema) {
+    List<RecordTransformer> transformers = new ArrayList<>();
+    IngestionConfig ingestionConfig = tableConfig.getIngestionConfig();
+    if (ingestionConfig != null) {
+      List<EnrichmentConfig> enrichmentConfigs = ingestionConfig.getEnrichmentConfigs();
+      if (enrichmentConfigs != null) {
+        for (EnrichmentConfig enrichmentConfig : enrichmentConfigs) {
+          try {
+            addIfNotNoOp(transformers, RecordEnricherRegistry.createRecordEnricher(enrichmentConfig));
+          } catch (IOException e) {
+            throw new RuntimeException("Failed to instantiate record enricher " + enrichmentConfig.getEnricherType(),
+                e);
+          }
+        }
+      }
+    }
+    addIfNotNoOp(transformers, new ExpressionTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new FilterTransformer(tableConfig));
+    addIfNotNoOp(transformers, new SchemaConformingTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new DataTypeTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new TimeValidationTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SpecialValueTransformer(schema));
+    addIfNotNoOp(transformers, new NullValueTransformer(tableConfig, schema));
+    addIfNotNoOp(transformers, new SanitizationTransformer(schema));
+    return transformers;
+  }
+
+  private static void addIfNotNoOp(List<RecordTransformer> transformers, RecordTransformer transformer) {
+    if (!transformer.isNoOp()) {
+      transformers.add(transformer);
+    }
+  }
+
   public static CompositeTransformer getDefaultTransformer(TableConfig tableConfig, Schema schema) {
-    return new CompositeTransformer(
-        Stream.of(new ExpressionTransformer(tableConfig, schema), new FilterTransformer(tableConfig),
-                new DataTypeTransformer(tableConfig, schema), new TimeValidationTransformer(tableConfig, schema),
-                new NullValueTransformer(tableConfig, schema), new SanitizationTransformer(schema))
-            .filter(t -> !t.isNoOp()).collect(Collectors.toList()));
+    return new CompositeTransformer(getDefaultTransformers(tableConfig, schema));
+  }
+
+  /**
+   * Includes custom and default transformers.
+   */
+  public static CompositeTransformer composeAllTransformers(List<RecordTransformer> customTransformers,
+      TableConfig tableConfig, Schema schema) {
+    List<RecordTransformer> allTransformers = new ArrayList<>(customTransformers);
+    allTransformers.addAll(getDefaultTransformers(tableConfig, schema));
+    return new CompositeTransformer(allTransformers);
   }
 
   /**
    * Returns a pass through record transformer that does not transform the record.
    */
   public static CompositeTransformer getPassThroughTransformer() {
-    return new CompositeTransformer(Collections.emptyList());
+    return new CompositeTransformer(List.of());
   }
 
   public CompositeTransformer(List<RecordTransformer> transformers) {
     _transformers = transformers;
   }
 
+  @Override
+  public Set<String> getInputColumns() {
+    Set<String> inputColumns = new HashSet<>();
+    for (RecordTransformer transformer : _transformers) {
+      inputColumns.addAll(transformer.getInputColumns());
+    }
+    return inputColumns;
+  }
+
   @Nullable
   @Override
   public GenericRow transform(GenericRow record) {
     for (RecordTransformer transformer : _transformers) {
+      if (!IngestionUtils.shouldIngestRow(record)) {
+        return record;
+      }
       record = transformer.transform(record);
       if (record == null) {
         return null;
