@@ -23,15 +23,19 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.text.SimpleDateFormat;
 import java.util.Arrays;
+import java.util.Date;
 import java.util.List;
+import java.util.TimeZone;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.spi.env.PinotConfiguration;
 
@@ -41,6 +45,9 @@ import org.apache.pinot.spi.env.PinotConfiguration;
  * if access to the file is denied.
  */
 public class LocalPinotFS extends BasePinotFS {
+
+  public static final String BACKUP = ".backup";
+  public static final String TMP = ".tmp";
 
   @Override
   public void init(PinotConfiguration configuration) {
@@ -112,8 +119,9 @@ public class LocalPinotFS extends BasePinotFS {
     if (!recursive) {
       return Arrays.stream(file.list()).map(s -> new File(file, s)).map(File::getAbsolutePath).toArray(String[]::new);
     } else {
-      return Files.walk(Paths.get(fileUri)).
-          filter(s -> !s.equals(file.toPath())).map(Path::toString).toArray(String[]::new);
+      try (Stream<Path> pathStream = Files.walk(Paths.get(fileUri))) {
+        return pathStream.filter(s -> !s.equals(file.toPath())).map(Path::toString).toArray(String[]::new);
+      }
     }
   }
 
@@ -124,14 +132,20 @@ public class LocalPinotFS extends BasePinotFS {
     if (!recursive) {
       return Arrays.stream(file.list()).map(s -> getFileMetadata(new File(file, s))).collect(Collectors.toList());
     } else {
-      return Files.walk(Paths.get(fileUri)).filter(s -> !s.equals(file.toPath())).map(p -> getFileMetadata(p.toFile()))
-          .collect(Collectors.toList());
+      try (Stream<Path> pathStream = Files.walk(Paths.get(fileUri))) {
+        return pathStream.filter(s -> !s.equals(file.toPath()))
+            .map(p -> getFileMetadata(p.toFile()))
+            .collect(Collectors.toList());
+      }
     }
   }
 
   private static FileMetadata getFileMetadata(File file) {
-    return new FileMetadata.Builder().setFilePath(file.getAbsolutePath()).setLastModifiedTime(file.lastModified())
-        .setLength(file.length()).setIsDirectory(file.isDirectory()).build();
+    return new FileMetadata.Builder().setFilePath(file.getAbsolutePath())
+        .setLastModifiedTime(file.lastModified())
+        .setLength(file.length())
+        .setIsDirectory(file.isDirectory())
+        .build();
   }
 
   @Override
@@ -184,28 +198,54 @@ public class LocalPinotFS extends BasePinotFS {
   private static File toFile(URI uri) {
     // NOTE: Do not use new File(uri) because scheme might not exist and it does not decode '+' to ' '
     //       Do not use uri.getPath() because it does not decode '+' to ' '
-    try {
-      return new File(URLDecoder.decode(uri.getRawPath(), "UTF-8"));
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException(e);
-    }
+    return new File(URLDecoder.decode(uri.getRawPath(), StandardCharsets.UTF_8));
   }
 
   private static void copy(File srcFile, File dstFile, boolean recursive)
       throws IOException {
-    if (dstFile.exists()) {
-      FileUtils.deleteQuietly(dstFile);
-    }
-    if (srcFile.isDirectory()) {
-      if (recursive) {
-        FileUtils.copyDirectory(srcFile, dstFile);
+
+    // Create a temporary file in the same directory as dstFile
+    File tmpFile = new File(dstFile.getParent(), dstFile.getName() + TMP);
+    SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd_HH-mm-ss.SSS");
+    sdf.setTimeZone(TimeZone.getTimeZone("UTC")); // Set time zone to UTC
+    File backupFile = new File(
+        dstFile.getParent(),
+        dstFile.getName() + BACKUP + "_" + sdf.format(new Date())
+    );
+
+    try {
+      // Step 1: Copy the file or directory into the temporary file
+      if (srcFile.isDirectory()) {
+        if (recursive) {
+          FileUtils.copyDirectory(srcFile, tmpFile);
+        } else {
+          throw new IOException(
+              srcFile.getAbsolutePath() + " is a directory and recursive copy is not enabled.");
+        }
       } else {
-        // Throws Exception on failure
-        throw new IOException(srcFile.getAbsolutePath() + " is a directory and recursive copy is not enabled.");
+        FileUtils.copyFile(srcFile, tmpFile);
       }
-    } else {
-      // Will create parent directories, throws Exception on failure
-      FileUtils.copyFile(srcFile, dstFile);
+
+      if (dstFile.exists() && !dstFile.renameTo(backupFile)) {
+        throw new IOException("Failed to rename destination file to backup file.");
+      }
+
+      // Step 2: Rename the temporary file to the destination file
+      if (!tmpFile.renameTo(dstFile)) {
+        throw new IOException("Failed to rename temporary file to destination file.");
+      }
+      FileUtils.deleteQuietly(backupFile);
+    } catch (Exception e) {
+      // Cleanup the temporary file in case of errors
+      // intentionally not deleting the backup file if anything goes wrong
+      FileUtils.deleteQuietly(tmpFile);
+      throw new LocalPinotFSException(e);
+    }
+  }
+
+  public static class LocalPinotFSException extends IOException {
+    LocalPinotFSException(Throwable e) {
+      super(e);
     }
   }
 }
